--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <a href="#">Features</a>
     <a href="#">About</a>
     <a href="#">Contact</a>
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    <a class="logo" href="#">
+      <img  src="img/logo.png" alt="Great Idea! Company logo.">
+      </a>
     </nav>
     
     
